c3-ec2securitygroups.tf
# Create Security Group - SSH Traffic

resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "Dev VPC SSH"

  ingress     {
      description      = "Allow port 22"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    }
  
  egress     {
      description      = "Allow all outbound"  
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
  }
  

  tags = {
    Name = "vpc-ssh-sg"
  }
}


# Create Security Group - WEB Traffic

resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "Dev VPC Web"

  ingress     {
      description      = "Allow port 80"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
  }
  

  egress     {
      description      = "Allow all outbound"  
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
  
  }
  

  tags = {
    Name = "vpc-web-sg"
  }
}
